[gd_scene load_steps=27 format=3 uid="uid://de7un1c2te1i3"]

[ext_resource type="Texture2D" uid="uid://dglvd77dhaji3" path="res://assets/Enemies/Slime.png" id="1_2t8v0"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_fgyay"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xf11r"]
atlas = ExtResource("1_2t8v0")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fb30"]
atlas = ExtResource("1_2t8v0")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nnyx"]
atlas = ExtResource("1_2t8v0")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbg2d"]
atlas = ExtResource("1_2t8v0")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvjhh"]
atlas = ExtResource("1_2t8v0")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_the68"]
atlas = ExtResource("1_2t8v0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vss1"]
atlas = ExtResource("1_2t8v0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuc5u"]
atlas = ExtResource("1_2t8v0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3jna"]
atlas = ExtResource("1_2t8v0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1q5e"]
atlas = ExtResource("1_2t8v0")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pepn1"]
atlas = ExtResource("1_2t8v0")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_snwum"]
atlas = ExtResource("1_2t8v0")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs5eu"]
atlas = ExtResource("1_2t8v0")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e541"]
atlas = ExtResource("1_2t8v0")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_10axd"]
atlas = ExtResource("1_2t8v0")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vmr33"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf11r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fb30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nnyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbg2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvjhh")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_the68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vss1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuc5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3jna")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1q5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pepn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snwum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs5eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e541")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10axd")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7b3ax"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jel4d"]
radius = 7.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fsmcb"]
radius = 56.0357

[sub_resource type="CircleShape2D" id="CircleShape2D_5jvn1"]
radius = 62.0081

[sub_resource type="Animation" id="Animation_lcx60"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hit/CollisionShape2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hit/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hit/CollisionShape2D:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CapsuleShape2D_jel4d")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hit/CollisionShape2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_s86am"]
resource_name = "death"
length = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"die"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_y4lno"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hit/CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1.5708, 0.0, 0.0, 0.0, 1.5708, 1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hit/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.277522, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-1, 2), Vector2(-1, -1), Vector2(-1, -3), Vector2(-1, -3), Vector2(-1, 0), Vector2(-1, 2), Vector2(-1, 2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hit/CollisionShape2D:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [SubResource("CapsuleShape2D_jel4d"), SubResource("CapsuleShape2D_jel4d"), SubResource("CapsuleShape2D_jel4d"), SubResource("CapsuleShape2D_jel4d"), SubResource("CapsuleShape2D_jel4d"), SubResource("CapsuleShape2D_jel4d")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("hit/CollisionShape2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_htxhp"]
_data = {
"RESET": SubResource("Animation_lcx60"),
"death": SubResource("Animation_s86am"),
"walk": SubResource("Animation_y4lno")
}

[node name="slime" type="CharacterBody2D"]
script = ExtResource("1_fgyay")

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vmr33")
animation = &"move"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_7b3ax")

[node name="hit" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit"]
position = Vector2(-1, -1)
shape = SubResource("CapsuleShape2D_jel4d")

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_fsmcb")

[node name="AttackDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_5jvn1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_htxhp")
}

[connection signal="body_entered" from="hit" to="." method="_on_hit_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="AttackDetector" to="." method="_on_attack_detector_body_exited"]
